--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.icatproject</groupId>
 	<artifactId>ids.client</artifactId>
@@ -10,7 +11,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<repoUrl>http://www.icatproject.org/mvn/repo</repoUrl>
-		<ids.server.version>1.5.0</ids.server.version>
+		<ids.server.version>1.5.1-SNAPSHOT</ids.server.version>
 		<project.scm.id>github</project.scm.id>
 	</properties>
 
@@ -25,8 +26,8 @@
 		<connection>scm:git:https://github.com/icatproject/ids.client.git</connection>
 		<developerConnection>scm:git:https://github.com/icatproject/ids.client.git</developerConnection>
 		<url>https://github.com/icatproject/ids.client</url>
-	  <tag>HEAD</tag>
-  </scm>
+		<tag>HEAD</tag>
+	</scm>
 
 	<issueManagement>
 		<url>https://github.com/icatproject/ids.client/issues</url>
@@ -110,8 +111,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.3</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 
@@ -158,7 +159,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
-				<version>2.5.5</version>
+				<version>2.6</version>
 				<configuration>
 					<descriptors>
 						<descriptor>${project.basedir}/assemble/distribution.xml</descriptor>
