--- a/src/test/resources/two.properties
+++ b/src/test/resources/two.properties
@@ -1,4 +1,6 @@
 icat.url = https://smfisher.esc.rl.ac.uk:8181
+maxEntities = 10000
+
 plugin.zipMapper.class = org.icatproject.ids.storage.ZipMapper
 
 plugin.main.class = org.icatproject.ids.storage.MainFileStorage
